--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,26 @@
-# 环境文件
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# 构建输出
+# Build output
 dist/
 build/
 src-tauri/target/
 src-tauri/resources/python-api/dist/
 src-tauri/resources/python-api/build/
 
-# 依赖
+# Dependencies
 node_modules/
 
-# 日志
+# Logs
 *.log
 logs/
 
-# 编辑器
-# 保留共享的 VS Code 配置，只排除用户特定设置
+# Editor
+# Keep shared VS Code config, only exclude user-specific settings
 .vscode/launch.json
 .vscode/tasks.json
 .vscode/*.code-workspace
@@ -28,12 +28,13 @@ logs/
 *.swp
 *.swo
 
-# 系统文件
+# System files
 .DS_Store
 Thumbs.db
 
 # Tauri
 src-tauri/bin/
+src-tauri/gen/
 
 # Server data
 server/data/
