Fix deepseek API

--- a/.env.development
+++ b/.env.development
@@ -1,17 +1,7 @@
-# 开发环境配置
-VITE_DEV_MODE=true
-VITE_DEBUG=true
-VITE_LOG_LEVEL=debug
+﻿# Development Environment Configuration
 
-# 开发环境 API 配置
-VITE_FLASK_API_URL=http://localhost:5000
-VITE_OLLAMA_BASE_URL=http://localhost:11434
-
-# 开发功能开关
-VITE_ENABLE_DEV_TOOLS=true
-VITE_ENABLE_HOT_RELOAD=true
-VITE_ENABLE_CONSOLE_LOGS=true
-
-# 开发超时设置
-VITE_API_TIMEOUT=180000
-VITE_HEALTH_CHECK_TIMEOUT=10000
+# Mock Mode
+# Enable mock mode for development (use mock data instead of real API)
+# Values: 'true' | 'false'
+# Default: auto-enabled in development mode if not explicitly set to 'false'
+VITE_USE_MOCK=true
