--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,8 @@ windows-sys = "0.61"
 tauri-plugin-shell = "2"
 ctrlc = "3.4"
 kill_tree = "0.2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
