--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libwebkit2gtk-4.0-dev \
             build-essential \
             curl \
             wget \
@@ -43,7 +42,8 @@ jobs:
             libayatana-appindicator3-dev \
             librsvg2-dev \
             libglib2.0-dev \
-            libgobject-2.0-dev
+            pkg-config \
+            libwebkit2gtk-4.1-dev
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
