--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libwebkit2gtk-4.0-dev \
             build-essential \
             curl \
             wget \
@@ -121,7 +120,8 @@ jobs:
             libayatana-appindicator3-dev \
             librsvg2-dev \
             libglib2.0-dev \
-            libgobject-2.0-dev
+            pkg-config \
+            libwebkit2gtk-4.1-dev
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
