Fix build and server should be closed correctly

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 # Build output
 dist/
 build/
+release/
 src-tauri/target/
-src-tauri/resources/python-api/dist/
-src-tauri/resources/python-api/build/
+src-tauri/resources/flask-api*
 
 # Dependencies
 node_modules/
