--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build",
+    "tauri:build": "tauri build && node scripts/move-build-output.js",
     "build:python": "python server/build.py",
     "server:dev": "python server/run.py",
     "server:build": "python server/build.py",
     "dist": "npm run build && npm run tauri:build",
-    "clean": "rm -rf node_modules src-tauri/target src-tauri/resources/python-api/build",
     "type-check": "tsc --noEmit",
     "lint": "npm run lint:ts && npm run lint:python && npm run lint:i18n",
     "lint:ts": "tsc --noEmit",
     "lint:python": "cd server && python -m flake8 src --config=.flake8",
-    "lint:i18n": "cd server && python scripts/check_i18n.py",
     "check": "npm run lint && npm run test:python",
-    "check:python": "cd server && python -c \"import sys; sys.path.insert(0, 'src'); from utils.logger import get_logger; print('✓ Python import check passed')\"",
     "env:dev": "cp .env.development .env",
     "env:prod": "cp .env.production .env",
     "env:example": "cp .env.example .env",
