--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,22 @@ jobs:
             pkg-config \
             libwebkit2gtk-4.1-dev
       
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      
+      - name: Install Python dependencies
+        working-directory: server
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Build Python backend
+        working-directory: server
+        run: python build.py --current-platform-only
+      
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       
