Add eslint rules

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "server:build": "python server/build.py",
     "dist": "npm run build && npm run tauri:build",
     "type-check": "tsc --noEmit",
-    "lint": "npm run lint:ts && npm run lint:python && npm run lint:i18n",
+    "lint": "npm run lint:ts && npm run lint:eslint && npm run lint:python && npm run lint:i18n",
     "lint:ts": "tsc --noEmit",
+    "lint:eslint": "eslint . --ext .ts,.tsx",
     "lint:python": "cd server && python -m flake8 src --config=.flake8",
     "check": "npm run lint && npm run test:python",
     "env:dev": "cp .env.development .env",
@@ -57,16 +58,21 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/react-redux": "^7.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.39.2",
+    "globals": "^16.5.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.5.6",
-    "sass": "^1.93.3",
+    "sass": "^1.97.1",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2",
+    "typescript-eslint": "^8.51.0",
+    "vite": "^7.3.0",
     "vitest": "^2.1.8"
   }
 }
